--- a/playbook.yml
+++ b/playbook.yml
@@ -1,20 +1,26 @@
 ---
 # YAML documents begin with the document separator ---
 
-# The minus in YAML this indicates a list item.  The playbook contains a list 
-# of plays, with each play being a dictionary
-- 
+# Le tiret en YAML indique une Liste
+# Un playbook Ansible contient une liste de plays
+- name: Configuration du message du jour
+  hosts: centos
+  user: root
 
-  # Hosts: where our play will run and options it will run with
+  # Play: la configuration générale du play
 
-  # Vars: variables that will apply to the play, on all target systems
+  # Vars: variables qui s'appliquent au play
 
-  # Tasks: the list of tasks that will be executed within the play, this section
-  #       can also be used for pre and post tasks
+  # Tasks: La liste des tâches à exécuter
+  tasks:
+    - name: Configure le motd
+      copy: # On utilise le module copy
+        src: centos_motd
+        dest: /etc/motd
 
-  # Handlers: the list of handlers that are executed as a notify key from a task
+  # Handlers: la liste des handlers à utilisé en réaction à un notify_key
 
-  # Roles: list of roles to be imported into the play
+  # Roles: les roles à importer dans le play
 
 # Three dots indicate the end of a YAML document
 ...
